<resources>
    <string name="app_name">coinMonitor</string>
    <string name="asset">asset</string>
    <string name="coin">coin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="default_asset_rank">#1</string>
    <string name="default_asset_name_and_symbol">Bitcoin (BTC)</string>
    <string name="default_asset_priceUSD">$10,000.00</string>
    <string name="default_asset_changePercent">2.76%</string>
    <string name="asset_marketCap">Market cap</string>
    <string name="default_asset_marketCap">$1.07t</string>
    <string name="asset_marketVolume24Hr">Volume (24Hr)</string>
    <string name="default_asset_marketVolume24Hr">$24.81b</string>
    <string name="asset_marketSupply">Supply</string>
    <string name="default_asset_marketSupply">18.70m BTC</string>
    <string name="open_asset_website">Website</string>
    <string name="open_blockchain_info">Explorer</string>
    <string name="asset_rank">RANK</string>
    <string name="default_asset_name">Bitcoin</string>
    <string name="default_asset_symbol">BTC</string>
    <string name="high">HIGH</string>
    <string name="average">AVERAGE</string>
    <string name="low">LOW</string>
    <string name="change">CHANGE</string>
    <string name="default_asset_history_change_value">0%</string>
    <string name="more_details">Details</string>
    <string name="period_one_day">1D</string>
    <string name="period_one_week">1W</string>
    <string name="period_one_month">1M</string>
    <string name="period_three_month">3M</string>
    <string name="period_six_month">6M</string>
    <string name="period_one_year">1Y</string>
    <string name="period_all">ALL</string>

    <string-array name="allowed_chart_intervals">
        <item>ONE_DAY</item>
        <item>ONE_WEEK</item>
        <item>ONE_MONTH</item>
        <item>THREE_MONTHS</item>
        <item>SIX_MONTHS</item>
        <item>ONE_YEAR</item>
        <item>ALL</item>
    </string-array>

</resources>